# git-p5

./: .gitignore  .vercelignore  Cargo.toml  vercel.json
api/: check.rs
extension/: package-lock.json  package.json  vite.config.ts
extension/public/: manifest.json
extension/src/: App.css  App.tsx
extension/src/background/: index.ts
extension/src/content/: index.ts  monster.ts
src/: lib.rs  main.rs
supabase/migrations/: 0001_create_monsters_table.sql
