[package]
name = "git-p5"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
firestore = "0.47.1"
reqwest = { version = "0.13.1", features = ["json", "rustls-native-certs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tokio = { version = "1.49.0", features = ["full"] }
vercel_axum = "1.1.6"
