[package]
name = "git-p5"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
firestore = "0.47.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

tokio = { version = "1.41.1", features = ["full"] }
vercel_axum = "1.1.6"
