[package]
name = "git-p5"
version = "0.1.0"
edition = "2021"

[lib]
name = "git_p5"
path = "src/lib.rs"

[[bin]]
name = "check"
path = "api/check.rs"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
firestore = "0.47.1"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.41.1", features = ["full"] }
vercel_runtime = { version = "2.1", features = ["axum"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
